--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -184,6 +184,10 @@ h2 {
     padding-left: 10px;
 }
 
+.padding-right-20 {
+    padding-right: 20px;
+}
+
 .height-100 {
     height: 100px;
 }
@@ -216,6 +220,10 @@ h2 {
     margin-top: 20px;
 }
 
+.margin-top-50 {
+    margin-top: 50px;
+}
+
 .width-100 {
     width: 100px;
 }
@@ -232,8 +240,8 @@ h2 {
 
 @media all and (min-width: 581px) {
     .photo-fit {
-        height: 120px;
-        width: 120px;
+        height: 160px;
+        width: 160px;
         object-fit: cover;
         vertical-align: middle;
         margin-bottom: 10px;
@@ -292,8 +300,7 @@ h2 {
   position: absolute;
   top: 15px;
   right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
+  color: #434343;
   font-weight: bold;
   transition: 0.3s;
 }
@@ -311,4 +318,3 @@ h2 {
     width: 100%;
   }
 }
-
