--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -9,7 +9,10 @@
 {% block body_block %}
 {% if not success %}
     <div class="alert alert-danger" role="alert">
-        <span>&#10004; Invalid login details, please try again!</span>
+        <span>&#10008; Invalid login details, please try again!</span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
+        </button>
     </div>
 {% endif %}
         <div>
@@ -29,11 +32,6 @@
                             <div class="form-group">
                               <label>Password</label>
                               <input type="password" name="password" class="form-control" placeholder="Password">
-                            </div>
-                            <div>
-                            <label>
-                                <input type="checkbox"> Remember me
-                            </label>
                             </div>
                             <div>
                                 <button type="submit" value="submit" class="btn btn-primary block-button">Login</button>
