--- a/templates/west_end_market/my_account.html
+++ b/templates/west_end_market/my_account.html
@@ -23,27 +23,31 @@
                     <label>Profile Picture</label>
                     <br>
                 </div>
+                <div class="text-center">
+                    <a href="{% url 'user_profile' user.username %}"><button class="btn btn-info block-button">My listings</button></a>
+                    <a href="{% url 'add_listing' %}"><button class="btn btn btn-info block-button">Create Listing</button></a>
+                </div>
             </div>
 
             <div class="col-md-8">
-                <div class="form-group font-weight-bold">
-                    <label>Username</label>
-                    <p id="id_username" class="form-control font-italic">{{user.username}}</p>
-                    <p class="text-left helptext">Required. 25 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
-                </div>
-                <div class="form-group font-weight-bold">
-                    <label>Email address</label>
-                    <p id="id_email" class="form-control font-italic" >{{user.email}}</p>
-                </div>
-                Total listings: {{listings|length}}
-                <div class="text-right">
-                    <a href="{% url 'edit_profile' %}"><button class="btn btn-danger block-button">Edit Profile</button></a>
-                    <a href="{% url 'user_profile' user.username %}"><button class="btn btn-primary block-button">My listings</button></a>
-                    <a href="{% url 'add_listing' %}"><button class="btn btn-primary block-button">Create Listing</button></a>
+                <div class="row margin-top-50">
+                    <div class="text-box text-box-mobile col-md-9">
+                        <div class="row">
+                            <span><strong>Username: </strong>{{user.username}}</span>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <span><strong>Email address: </strong>{{user.email}}</span>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <span class="text-right"><strong>Total listings: </strong>{{listings|length}}</span>
+                            <hr>
+                            <a href="{% url 'edit_profile' %}"><button class="btn btn-danger block-button">Edit Profile</button></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </form>
-
 </div>
 {% endblock %}
