--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -22,9 +22,9 @@
                 </div>
             </div>    
             <div class="text-box col-md-9 text-box-mobile">
-                <p><strong>Item Name:</strong> {{listing.title}}</p>
-                <p><strong>Price:</strong> {{listing.price}}</p>
-                <p><strong>Date:</strong> {{listing.date.date}}</p>
+                <div class="row"><span><strong>Item Name:</strong> {{listing.title}}</span></div>
+                <div class="row"><span><strong>Price:</strong> {{listing.price}}</span></div>
+                <div class="row"><span><strong>Date:</strong> {{listing.date.date}}</span></div>
             </div>
             {% endfor %}
         </div>
