--- a/templates/west_end_market/edit_profile.html
+++ b/templates/west_end_market/edit_profile.html
@@ -8,14 +8,14 @@
 {% block body_block %}
 {% if edited %}
     <div class="alert alert-success" role="alert">
-        <span>&#10004; You have successfully update your profile!</span>
+        <span>&#10004; You have successfully updated your profile! Click <a href="{% url 'login' %}">here</a> to login with your new details!</span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
         </button>
     </div>
-{% else %}
+{% elif password_short %}
     <div class="alert alert-danger" role="alert">
-        <span>&#10008; Invalid details. Profile not updated!</span>
+        <span>&#10008;Password must be at least 6 characters long!</span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
         </button>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="form-group font-weight-bold">
                     <label>Password</label>
-                    <input required id="id_password" type="password" class="form-control font-italic" value="{{user.password}}" name="password">
+                    <input required id="id_password" type="password" class="form-control font-italic" name="password">
                 </div>
                         
                 <div class="text-right">
