--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -112,8 +112,8 @@ h2 {
 @media all and (max-width:580px) {
    .block-button { 
        width: 100%; 
-       display:block;
-       margin-right: 0;
+       display: block;
+       margin: 0;
        margin-top: 15px;
     }
     .item-box-mobile {
@@ -140,6 +140,14 @@ h2 {
         margin-left: 5%;
         width: 90%;
         align-self: center;
+    }
+    
+    .text-center-mobile {
+        text-align: center;
+    }
+    
+    .hide-logo-mobile {
+        display: none;
     }
 }
     #scrollBtn {
