--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -25,14 +25,14 @@
 
         <header>
             <nav class="navbar navbar-expand-lg navbar-light light-primary-color">
-                <img src="{% static 'images/logo.png' %}" alt="image of the logo" width=auto height= 65px>
-                <h1><a class="navbar-brand main-heading margin-right-40" style="color: #FF5722;" href="{% url 'index' %}">West End Market</a></h1>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <img class="hide-logo-mobile" src="{% static 'images/logo.png' %}" alt="WEM logo" width=auto height= 65px>
+                <h1><a class="navbar-brand main-heading margin-right-40 text-center-mobile" style="color: #FF5722;" href="{% url 'index' %}">West End Market</a></h1>
+                <button class="navbar-toggler text-center-mobile" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-center-mobile"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto text-center-mobile">
                         <li class="nav-item active">
                             <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -42,7 +42,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
 
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu text-center-mobile" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{% url 'show_category' 'school' %}">School</a>
                                 <a class="dropdown-item" href="{% url 'show_category' 'electronics' %}">Electronics</a>
                                 <a class="dropdown-item" href="{% url 'show_category' 'clothing' %}">Clothing</a>
@@ -55,7 +55,9 @@
                     </ul>
                     <form id = "searchform" method="POST" action="{% url 'search_results' %}" class="form-inline my-2 my-lg-0">{% csrf_token %}
                         <input name="search" id="searchbox" value = "{{request.GET.search}}" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success my-2 my-sm-0 margin-right-40 block-button" type="submit">Search &#x1F50D;</button>
+                        <div class="block-button">
+                            <button class="btn btn-success my-2 my-sm-0 margin-right-40 block-button" type="submit">Search &#x1F50D;</button>
+                        </div>
                     </form>
                     <ul class="navbar-nav mr-auto">
                         {% if user.is_authenticated %}
@@ -89,7 +91,7 @@
         <footer class="footer mt-auto py-3 footer-style">
             <!-- DUMMY FOOTER TEXT -->
             <div class="footer-content">
-                <p class="text-center text-secondary"><a><a class="text-secondary" href="{% url 'index' %}">Home</a> | <a class="text-secondary" href="{% url 'cookie_policy' %}">Cookie Policy</a> | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
+                <p class="text-center text-secondary"><strong><a class="text-secondary" href="{% url 'index' %}">Home</a> | <a class="text-secondary" href="{% url 'cookie_policy' %}">Cookie Policy</a> | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
             </div>
         </footer>        
         
