--- a/templates/west_end_market/edit_profile.html
+++ b/templates/west_end_market/edit_profile.html
@@ -29,7 +29,7 @@
             <div class="col-md-4 text-center">
                 <h3>Edit Profile</h3>
                 <div class="text-center">
-                    {% if profile.picture.url %}
+                    {% if profile.picture %}
                         <img id="id_profile" class="img-thumbnail"  src="{{profile.picture.url}}" alt="image of the item" width=200 height=200>
                     {% else %}
                         <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/profile.jpg' %}" alt="image of the item" width=200 height=200>
