--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -22,7 +22,6 @@
     </head>
   
     <body class="d-flex flex-column h-100">
-
         <header>
             <nav class="navbar navbar-expand-lg navbar-light light-primary-color">
                 <img class="hide-logo-mobile" src="{% static 'images/logo.png' %}" alt="WEM logo" width=auto height= 65px>
@@ -82,14 +81,15 @@
         
         <main role="main" class="flex-shrink-0 margin-bottom-40">
             <div>
+                <!-- Inherited templates are shown here -->
                 {% block body_block %}
 
                 {% endblock %}
             </div>
         </main>
         
+        <!-- Footer starts here -->
         <footer class="footer mt-auto py-3 footer-style">
-            <!-- DUMMY FOOTER TEXT -->
             <div class="footer-content">
                 <p class="text-center text-secondary"><strong><a class="text-secondary" href="{% url 'index' %}">Home</a> | <a class="text-secondary" href="{% url 'cookie_policy' %}">Cookie Policy</a> | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
             </div>
@@ -105,5 +105,6 @@
         <script type="text/javascript" src="{% static 'vendors/js/cookiepopup.js' %}"></script>
         <script type="text/javascript" src="{% static 'vendors/js/modalimage.js' %}"></script>
         <script type="text/javascript" src="{% static 'vendors/js/scrolluparrow.js' %}"></script>
+        <script type="text/javascript" src="{% static 'vendors/js/dynamicphoto.js' %}"></script>
     </body>
 </html>
