--- a/templates/west_end_market/cookie_policy.html
+++ b/templates/west_end_market/cookie_policy.html
@@ -6,7 +6,7 @@
 {% endblock %}
         
 {% block body_block %}
-<div class="container">
+<div class="container margin-top-30">
     <h2>Cookie Policy</h2>
     <p align="justify"><strong>What are cookies?</strong></p>
     <p align="justify">Our website uses cookies. A cookie is a small text file which is stored on your computer, tablet or phone when you visit a website. These cookies allow us to distinguish you from other users of our website. This helps us to provide you with a good experience when you browse our website and also allows us to improve our website.</p>
