--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -14,7 +14,7 @@
                 <h3 class="text-center">Create a Listing</h3>
                         
                 <div class="text-center">
-                    <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=200 height=200>
+                    <img id="id_placeholder" class="height-240 width-240 round-edges"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item">
                 </div>
                         
                 <div class="form-group text-center font-weight-bold ">
@@ -57,7 +57,6 @@
                         
                 <div class="text-right">
                     <button class="btn btn-primary block-button" type="submit" value="submit" >Create</button>
-                    <button class="btn btn-outline-secondary" type="submit" value="submit" disabled>Update</button>
                 </div>
             </div>
         </div>       
