Jack: updated tests, fixed error with non-existent listing and fixed message with listing template

--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -75,7 +75,8 @@
                 </div>
             </div>
         {% else %}
-            There is no such listing! :(
+            <div class="alert alert-danger" role="alert">
+				<span>&#10004; There is no such listing. Please check the url and try again!</span>
         {% endif %}
 </div>   
 {% endblock %}
