added delete listing functionality and some comments

--- a/templates/west_end_market/category_page.html
+++ b/templates/west_end_market/category_page.html
@@ -9,7 +9,7 @@
 {% if category %}
     <div class="container margin-top-20">
         <div>
-            <h4 class="text-capitalize">Category: {{category}}</h4>
+            <h4 class="text-capitalize">Category: {{category}} ({{listings|length}})</h4>
             <hr>
         </div>
         <div>
