--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -61,7 +61,11 @@
 		</form>
 	</div>    
 {% else %}
-    <div class="alert alert-danger" role="alert">
-        <span>&#10004; There is no such user. Please check the url and try again!</span>
+	<div class="alert alert-danger" role="alert">
+        <span>&#10008;Password must be at least 6 characters long!</span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
+        </button>
+    </div>
 {% endif %} 	
 {% endblock %}
