--- a/templates/west_end_market/category_page.html
+++ b/templates/west_end_market/category_page.html
@@ -16,7 +16,12 @@
             <button onclick="topFunction()" id="scrollBtn" title="Go to top"><strong>&#8593;</strong></button>
         </div>
 
-        {% for listing in listings %}
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort By: </a>
+        <div class="dropdown-menu text-center-mobile" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'show_category' category_name 'price' %}">Price</a>
+            <a class="dropdown-item" href="{% url 'show_category' category_name 'date' %}">Date</a>
+        </div>
+        {% for listing in listings|dictsort:sort_by %}
         <div class="row margin-top-10">
             <div class="col-md-2">
                 <div class="text-center">
@@ -46,8 +51,12 @@
         {% endfor %}
     </div>
 {% else %}
-    <div class="alert alert-danger" role="alert">
-        <span>&#10004; There is no such category. Please check the url and try again!</span>
+        <div class="alert alert-danger" role="alert">
+        <span>&#10008;There is no such category. Please check the url and try again.</span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
+        </button>
+    </div>
 {% endif %}
 {% endblock %}
         
