--- a/templates/west_end_market/search_results.html
+++ b/templates/west_end_market/search_results.html
@@ -12,8 +12,12 @@
             <h4>Found {{results|length}} results for "{{search}}":</h4>
             <hr>
         </div>
-
-        {% for result in results %}
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort By: </a>
+        <div class="dropdown-menu text-center-mobile" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'search_results' search 'price' %}">Price</a>
+            <a class="dropdown-item" href="{% url 'search_results' search 'date' %}">Date</a>
+        </div>
+        {% for result in results|dictsort:sort_by %}
         <div class="row margin-top-10">
             <div class="col-md-2">
                 <div class="text-center">
