--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -9,9 +9,10 @@
 {% if user %}
 	<div class="container">
 		<form>
-			<div class="row margin-top-20">
+			<div class="row margin-top-20"><h3>User: {{user.username}}</h3></div>
+			<div class="row margin-top-10">
+
 				<div class="col-md-3">
-					<h3>User: {{user.username}}</h3>
 					<div>
 						{% if profile %}
 							<img id="id_profile" class="img-fluid item-box-mobile height-240 width-240 round-edges"  src="{{ profile.picture.url}}" alt="profile picture">
