--- a/templates/west_end_market/edit_listing.html
+++ b/templates/west_end_market/edit_listing.html
@@ -9,7 +9,7 @@
 {% if user == listing.user %}
     {% if edited %}
         <div class="alert alert-success" role="alert">
-            <span>&#10004; You have successfully update your profile!</span>
+            <span>&#10004; You have successfully updated your listing!</span>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
             </button>
