Jack: tests fixed, along with updating some templates

--- a/templates/west_end_market/category_page.html
+++ b/templates/west_end_market/category_page.html
@@ -52,7 +52,7 @@
     </div>
 {% else %}
         <div class="alert alert-danger" role="alert">
-        <span>&#10008;There is no such category. Please check the url and try again.</span>
+        <span>&#10008;There is no such category. Please check the url and try again!</span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
         </button>
